Email to force update after login (#100)
* add Email to force update after login
* fixes
