# src/api/api.ts
@@ -101,12 +101,6 @@ export interface Account {
      * @memberof Account
      */
     'status'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof Account
-     */
-    'timezone'?: string;
 }
 /**
  * 
@@ -1380,7 +1374,7 @@ export interface EventFilterByGroup {
      * @type {number}
      * @memberof EventFilterByGroup
      */
-    'groupId': number;
+    'group': number;
 }
 
 export const EventFilterByGroupTypeEnum = {
@@ -1628,6 +1622,12 @@ export interface EventRef {
  * @interface EventSegmentation
  */
 export interface EventSegmentation {
+    /**
+     * 
+     * @type {ReportType}
+     * @memberof EventSegmentation
+     */
+    'type'?: ReportType;
     /**
      * 
      * @type {EventRecordsListRequestTime}
@@ -2063,6 +2063,12 @@ export type FunnelFrequencyChartTypeTypeEnum = typeof FunnelFrequencyChartTypeTy
 export interface FunnelQuery {
     /**
      * 
+     * @type {ReportType}
+     * @memberof FunnelQuery
+     */
+    'type'?: ReportType;
+    /**
+     * 
      * @type {EventRecordsListRequestTime}
      * @memberof FunnelQuery
      */
@@ -2105,22 +2111,16 @@ export interface FunnelQuery {
     'filter'?: FunnelQueryFilter;
     /**
      * 
-     * @type {FunnelQueryAttribution}
-     * @memberof FunnelQuery
-     */
-    'attribution'?: FunnelQueryAttribution;
-    /**
-     * 
      * @type {Array<PropertyRef>}
      * @memberof FunnelQuery
      */
     'holdingConstants'?: Array<PropertyRef>;
     /**
      * 
-     * @type {Array<FunnelExcludeSteps>}
+     * @type {Array<FunnelQueryExcludeInner>}
      * @memberof FunnelQuery
      */
-    'exclude'?: Array<FunnelExcludeSteps>;
+    'exclude'?: Array<FunnelQueryExcludeInner>;
     /**
      * array of breakdowns
      * @type {Array<BreakdownByProperty>}
@@ -2156,63 +2156,55 @@ export const FunnelQueryCountEnum = {
 export type FunnelQueryCountEnum = typeof FunnelQueryCountEnum[keyof typeof FunnelQueryCountEnum];
 
 /**
- * @type FunnelQueryAttribution
- * @export
- */
-export type FunnelQueryAttribution = FunnelQueryAttributionOneOf | FunnelQueryAttributionOneOf1;
-
-/**
- * 
- * @export
- * @interface FunnelQueryAttributionOneOf
- */
-export interface FunnelQueryAttributionOneOf {
-    /**
-     * 
-     * @type {string}
-     * @memberof FunnelQueryAttributionOneOf
-     */
-    'type': FunnelQueryAttributionOneOfTypeEnum;
-}
-
-export const FunnelQueryAttributionOneOfTypeEnum = {
-    First: 'first',
-    Last: 'last'
-} as const;
-
-export type FunnelQueryAttributionOneOfTypeEnum = typeof FunnelQueryAttributionOneOfTypeEnum[keyof typeof FunnelQueryAttributionOneOfTypeEnum];
-
-/**
- * 
- * @export
- * @interface FunnelQueryAttributionOneOf1
- */
-export interface FunnelQueryAttributionOneOf1 {
-    /**
-     * 
-     * @type {string}
-     * @memberof FunnelQueryAttributionOneOf1
-     */
-    'type': FunnelQueryAttributionOneOf1TypeEnum;
-    /**
-     * 
-     * @type {number}
-     * @memberof FunnelQueryAttributionOneOf1
-     */
-    'step': number;
-}
-
-export const FunnelQueryAttributionOneOf1TypeEnum = {
-    Step: 'step'
-} as const;
-
-export type FunnelQueryAttributionOneOf1TypeEnum = typeof FunnelQueryAttributionOneOf1TypeEnum[keyof typeof FunnelQueryAttributionOneOf1TypeEnum];
-
-/**
  * @type FunnelQueryChartType
  * @export
  */
 export type FunnelQueryChartType = FunnelConversionOverTimeChartType | FunnelStepsChartType;
+
+/**
+ * 
+ * @export
+ * @interface FunnelQueryExcludeInner
+ */
+export interface FunnelQueryExcludeInner {
+    /**
+     * 
+     * @type {string}
+     * @memberof FunnelQueryExcludeInner
+     */
+    'eventName'?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof FunnelQueryExcludeInner
+     */
+    'eventId'?: number;
+    /**
+     * 
+     * @type {EventType}
+     * @memberof FunnelQueryExcludeInner
+     */
+    'eventType': EventType;
+    /**
+     * 
+     * @type {FunnelExcludeStepsSteps}
+     * @memberof FunnelQueryExcludeInner
+     */
+    'steps': FunnelExcludeStepsSteps;
+    /**
+     * array of event filters
+     * @type {Array<FunnelQueryExcludeInnerAllOfFiltersInner>}
+     * @memberof FunnelQueryExcludeInner
+     */
+    'filters'?: Array<FunnelQueryExcludeInnerAllOfFiltersInner>;
+}
+
+
+/**
+ * @type FunnelQueryExcludeInnerAllOfFiltersInner
+ * @export
+ */
+export type FunnelQueryExcludeInnerAllOfFiltersInner = EventFilterByProperty;
 
 /**
  * @type FunnelQueryFilter
@@ -3055,12 +3047,6 @@ export interface Profile {
      * @memberof Profile
      */
     'email': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof Profile
-     */
-    'timezone': string;
     /**
      * 
      * @type {boolean}
@@ -4142,12 +4128,6 @@ export interface TimeBetween {
      * @memberof TimeBetween
      */
     'to': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof TimeBetween
-     */
-    'timezone': string;
 }
 
 export const TimeBetweenTypeEnum = {
@@ -4174,12 +4154,6 @@ export interface TimeFrom {
      * @memberof TimeFrom
      */
     'from': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof TimeFrom
-     */
-    'timezone': string;
 }
 
 export const TimeFromTypeEnum = {
