# src/server/models/Profile.ts
@@ -5,13 +5,13 @@ import type { Profile as IProfile } from '@/api'
 export class Profile implements IProfile {
   name: IProfile['name']
   email: IProfile['email']
-  timezone: IProfile['timezone']
   forceUpdatePassword: IProfile['forceUpdatePassword']
+  forceUpdateEmail: IProfile['forceUpdateEmail']
 
   constructor(profile: Partial<IProfile> = {}) {
     this.name = profile.name || faker.person.fullName()
     this.email = profile.email || faker.internet.email()
-    this.timezone = profile.timezone || 'utc'
-    this.forceUpdatePassword = profile.forceUpdatePassword ?? true
+    this.forceUpdatePassword = profile.forceUpdatePassword || true
+    this.forceUpdateEmail = true
   }
 }
